--- a/src/app/pages/user-management/wholesaler/index/wholesaler-index.component.html
+++ b/src/app/pages/user-management/wholesaler/index/wholesaler-index.component.html
@@ -12,6 +12,16 @@
   <!-- / HEADER -->
 
   <div class="content p-24" *ngIf="!onLoad">
+    <div fxLayout="row wrap" fxLayout.lt-md="column" fxLayoutGap="20px" fxLayoutGap.lt-md="10px"
+      style="background-color: #585858;" fxLayoutAlign="end center" class="p-16 export">
+      <a #downloadLink></a>
+      <!-- <button mat-raised-button type="button" class="is-danger" (click)="import()">
+        <mat-icon>arrow_downward</mat-icon> Import XLS
+      </button> -->
+      <button (click)="export()" mat-raised-button type="button" class="is-danger">
+        <mat-icon>arrow_upward</mat-icon> Export XLS
+      </button>
+    </div>
     <div class="table-wrapper">
       <div fxLayout="row" fxLayoutAlign="space-between center" class="top-table pt-8">
         <h2 class="pl-8">Daftar Wholesaler</h2>
