--- a/src/app/pages/content-management/tnc/create/tnc-create.component.html
+++ b/src/app/pages/content-management/tnc/create/tnc-create.component.html
@@ -31,7 +31,8 @@
           <div fxLayout="row">
             <mat-form-field fxFlex="50" class="is-light form-primary">
               <mat-select formControlName="user" placeholder="Grup Pengguna">
-                <mat-option *ngFor="let item of userGroup" [value]="item.value">{{item.name}}</mat-option>
+                <mat-option *ngFor="let item of userGroup" [value]="item.value" style="text-transform: capitalize;">
+                  {{item.name}}</mat-option>
               </mat-select>
               <mat-error *ngIf="formTnc.controls['user'].hasError('required') && formTnc.controls['user'].touched">
                 Grup Pengguna harus diisi
