--- a/src/app/pages/user-management/wholesaler/edit/wholesaler-edit.component.html
+++ b/src/app/pages/user-management/wholesaler/edit/wholesaler-edit.component.html
@@ -63,36 +63,59 @@
             </mat-error>
           </div>
 
-          <div fxLayout="row wrap" fxLayoutAlign="start center" fxFlex="1 0 auto">
-            <mat-form-field fxFlex="100" class="is-light form-primary">
-              <input matInput type="text" pattern="[0-9]*" inputmode="numeric" formControlName="account_number"
-                placeholder="Nomor Rekening Bank" numericOnly readonly>
-            </mat-form-field>
-          </div>
-          <div fxLayout="row wrap" fxLayoutAlign="start center" fxFlex="1 0 auto">
-            <mat-form-field fxFlex="100" class="is-light form-primary">
-              <input matInput placeholder="Nama Bank" formControlName="bank_name" readonly>
-            </mat-form-field>
-            <!-- <mat-form-field fxFlex="100" class="is-light form-primary readonly-wrapper">
-              <mat-select formControlName="bank_name" placeholder="Nama Bank" class="readonly-block" #singleSelect>
-                <ngx-mat-select-search [formControl]="filterBank" [placeholderLabel]="'Cari Nama Bank...'"
-                  [noEntriesFoundLabel]="'Tidak ada Nama Bank yang ditemukan'" class="readonly-block">
-                </ngx-mat-select-search>
-                <mat-option *ngFor="let item of filteredBanks | async" [value]="item.code">
-                  {{item.name}}
-                </mat-option>
-              </mat-select>
-            </mat-form-field> -->
-          </div>
-          <div fxLayout="row wrap" fxLayoutAlign="start center" fxFlex="1 0 auto">
-            <mat-form-field fxFlex="100" class="is-light form-primary">
-              <input matInput placeholder="Nama pada Rekening Bank" formControlName="account_name" readonly>
-            </mat-form-field>
-          </div>
-          <div fxLayout="row wrap" fxLayoutAlign="start center" fxFlex="1 0 auto">
-            <mat-form-field fxFlex="100" class="is-light form-primary">
-              <input matInput placeholder="Cabang" formControlName="branch" readonly>
-            </mat-form-field>
+          <div [formGroup]="formBankAccount">
+            <div fxLayout="row wrap" fxLayoutAlign="start center" fxFlex="1 0 auto">
+              <mat-form-field fxFlex="50" class="is-light form-primary">
+                <input matInput type="text" maxlength="16" pattern="[0-9]*" inputmode="numeric"
+                  formControlName="account_number" placeholder="Nomor Rekening Bank" numericOnly
+                  (keyup)="bindFormBankAccountValidator()">
+              </mat-form-field>
+              <mat-error
+                *ngIf="formBankAccount.controls['account_number'].hasError('required') && formBankAccount.controls['account_number'].touched">
+                Nomor Rekening harus diisi.
+              </mat-error>
+            </div>
+            <div fxLayout="row wrap" fxLayoutAlign="start center" fxFlex="1 0 auto">
+              <mat-form-field fxFlex="50" class="is-light form-primary">
+                <mat-select formControlName="bank_name" placeholder="Nama Bank" #singleSelect
+                  (selectionChange)="bindFormBankAccountValidator()">
+                  <ngx-mat-select-search [formControl]="filterBank" [placeholderLabel]="'Cari Nama Bank...'"
+                    [noEntriesFoundLabel]="'Tidak ada Nama Bank yang ditemukan'">
+                  </ngx-mat-select-search>
+                  <mat-option *ngFor="let item of filteredBanks | async" [value]="item.name">
+                    {{item.name}}
+                  </mat-option>
+                </mat-select>
+              </mat-form-field>
+              <mat-error
+                *ngIf="formBankAccount.controls['bank_name'].hasError('required') && formBankAccount.controls['bank_name'].touched">
+                Nama Bank harus diisi.
+              </mat-error>
+              <div fxFlex="2" *ngIf="!isDetail && formBankAccount.get('bank_name').value">
+                <button mat-icon-button color="" (click)="clearBankName()">
+                  <mat-icon class="secondary-text">close</mat-icon>
+                </button>
+              </div>
+            </div>
+            <div fxLayout="row wrap" fxLayoutAlign="start center" fxFlex="1 0 auto">
+              <mat-form-field fxFlex="50" class="is-light form-primary">
+                <input matInput placeholder="Nama pada Rekening Bank" formControlName="account_name"
+                  (keyup)="bindFormBankAccountValidator()">
+              </mat-form-field>
+              <mat-error
+                *ngIf="formBankAccount.controls['account_name'].hasError('required') && formBankAccount.controls['account_name'].touched">
+                Nama pada Rekening Bank harus diisi.
+              </mat-error>
+            </div>
+            <div fxLayout="row wrap" fxLayoutAlign="start center" fxFlex="1 0 auto">
+              <mat-form-field fxFlex="50" class="is-light form-primary">
+                <input matInput placeholder="Cabang" formControlName="branch" (keyup)="bindFormBankAccountValidator()">
+              </mat-form-field>
+              <mat-error
+                *ngIf="formBankAccount.controls['branch'].hasError('required') && formBankAccount.controls['branch'].touched">
+                Cabang Bank harus diisi.
+              </mat-error>
+            </div>
           </div>
 
           <!-- <mat-form-field fxFlex="100" class="is-light">
