--- a/src/app/pages/settings/support/support.component.scss
+++ b/src/app/pages/settings/support/support.component.scss
@@ -318,3 +318,12 @@
     margin-bottom: 20px;
   }
 }
+
+.previewIcon {
+  height: 310px !important;
+  width: auto !important;
+  border-radius: 0 !important;
+  background-size: contain !important;
+  border: none !important;
+  padding-left: 0;
+}
